--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 {
   "imports": {
     "three/": "https://aistudiocdn.com/three@^0.179.1/",
-    "three": "https://aistudiocdn.com/three@^0.179.1"
+    "three": "https://aistudiocdn.com/three@^0.179.1/build/three.module.js"
   }
 }
 </script>
