feat: Upgrade Three.js and refine rendering
Updates Three.js to version 0.182.0 and modifies import paths for Three.js modules.
Refactors scene, camera, and renderer initialization for improved performance and visual quality, including adjusting background color, camera position, and renderer pixel ratio.
Adjusts cubie gap for better visual spacing.
Updates CSS for a more modern UI aesthetic and improved canvas handling.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <script type="importmap">
 {
   "imports": {
-    "three/": "https://aistudiocdn.com/three@^0.179.1/",
-    "three": "https://aistudiocdn.com/three@^0.179.1/build/three.module.js"
+    "three": "https://unpkg.com/three@0.179.1/build/three.module.js",
+    "three/addons/": "https://unpkg.com/three@0.179.1/examples/jsm/",
+    "three/": "https://esm.sh/three@^0.182.0/"
   }
 }
 </script>
